[gd_scene load_steps=9 format=2]

[ext_resource path="res://Jogo/resources/Signpost.tres" type="Texture" id=1]
[ext_resource path="res://Jogo/Signpost.gd" type="Script" id=2]
[ext_resource path="res://Jogo/quest 2 - assets/Fontes/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Correct.wav" type="AudioStream" id=4]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Wrong.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.1897, 5.39162 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.7407, 5.45961 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[node name="Signpost" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.148651, 2.67571 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.345949, -1.40811 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -44.0
margin_top = 42.0
margin_right = 57.0
margin_bottom = 98.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 2.0
margin_top = -1.0
margin_right = 101.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 3 )
text = "Take in the green
Shiny with sheen
The answer for thee
It lies with the tree"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SolvedFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ErrorFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Signpost_body_entered"]
